--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@cityofzion/neon-core": "^5.5.1",
     "@cityofzion/neon-js": "^5.5.1",
     "@discordjs/core": "^0.6.0",
+    "@sentry/node": "^7.77.0",
+    "@sentry/profiling-node": "^1.2.6",
     "bignumber.js": "^9.1.1",
     "date-fns": "^2.30.0",
     "discord.js": "^12.5.1",
